# shopworks-onsite-edp

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  requirements-dependabot.txt  requirements-dev.txt  requirements.txt
.github/: dependabot.yaml
.github/workflows/: python-ci.yaml
docs/source/: conf.py  field-list.rst  index.rst
src/onsite_edp_generator/: lib.py  models.py
src/onsite_edp_sdk/: __init__.py  lib.py  models.py  serializer.py
src/shopworks-onsite-edp/: lib.py
src/shopworks_onsite_edp/: lib.py  models.py
tests/: test_models.py
