[project]
name = "shopworks-onsite-edp"
version = "0.1.0"
description = ""
authors = [
    {name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev"},
]
dependencies = [
    "pydantic>=1.9.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
