[project]
name = "shopworks-onsite-edp"
version = "0.1.0"
description = ""
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@impressdesigns.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["pydantic>=1.9.1"]

[project.optional-dependencies]
dev = [
    # DX
    "nox>=2024.4.15",
    "pre-commit>=3.7.1",
    # Linters
    "ruff>=0.5.2",
    "mypy>=1.10.1",
]
docs = [
    "sphinx>=7.4.4",
    "furo>=2024.5.6",
    "sphinx-autoapi>=3.1.2",
    "releases>=2.1.1",
]
tests = ["pytest>=8.2.2", "pytest-randomly>=3.15.0", "coverage>=7.6.1"]

[project.urls]
repository = "https://github.com/impressdesigns/shopworks-onsite-edp/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/shopworks_onsite_edp"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "CPY001", # (Missing copyright notice at top of file) - No license
]

[tool.ruff.lint.isort]
known-first-party = ["core"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["shopworks_onsite_edp"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
